# xiu-app

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/top/zhouxiumin/xiu/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/top/zhouxiumin/xiu/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/top/zhouxiumin/xiu/: ExampleUnitTest.java
audio/: build.gradle
audio/src/androidTest/java/top/zhouxiumin/audio/: ExampleInstrumentedTest.java
audio/src/main/: AndroidManifest.xml
audio/src/main/cpp/: CMakeLists.txt  main.cpp
audio/src/main/cpp/src/mat/: CMakeLists.txt  matrix.cpp  matrix.h
audio/src/main/java/top/zhouxiumin/audio/: MatrixUtil.java
audio/src/test/java/top/zhouxiumin/audio/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
